--- a/09-project/functions/package.json
+++ b/09-project/functions/package.json
@@ -2,7 +2,8 @@
   "name": "functions",
   "scripts": {
     "lint": "eslint \"src/**/*\"",
-    "build": "tsc",
+    "build": "tsc && ts-node src/tools/copyViews",
+    "copyViews": "ts-node src/tools/copyViews",
     "serve": "npm run build && firebase emulators:start --only functions",
     "shell": "npm run build && firebase functions:shell",
     "start": "npm run shell",
@@ -14,8 +15,17 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "@types/shelljs": "^0.8.8",
+    "cookie-parser": "^1.4.5",
+    "express-handlebars": "^5.2.0",
     "firebase-admin": "^9.2.0",
-    "firebase-functions": "^3.11.0"
+    "firebase-functions": "^3.11.0",
+    "http-errors": "^1.8.0",
+    "jade": "^1.11.0",
+    "morgan": "^1.10.0",
+    "path": "^0.12.7",
+    "shelljs": "^0.8.4",
+    "ts-node": "^9.0.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^3.9.1",
