--- a/09-project/firebase.json
+++ b/09-project/firebase.json
@@ -16,13 +16,30 @@
       {
         "source": "/api/**",
         "function": "app"
+      },
+      {
+        "source": "**",
+        "destination": "/index.html"
       }
     ]
   },
   "emulators": {
+    "functions": {
+      "port": 5001,
+      "host": "192.168.25.100"
+    },
     "firestore": {
+      "port": 5002,
+      "host": "192.168.25.100"
+    },
+    "hosting": {
+      "port": 5003,
+      "host": "192.168.25.100"
+    },
+    "ui": {
+      "enabled": true,
       "host": "192.168.25.100",
-      "port": "8085"
+      "port": 4000 
     }
   }
 }
