--- a/09-project/functions/package.json
+++ b/09-project/functions/package.json
@@ -2,8 +2,7 @@
   "name": "functions",
   "scripts": {
     "lint": "eslint \"src/**/*\"",
-    "build": "tsc && ts-node src/tools/copyViews",
-    "copyViews": "ts-node src/tools/copyViews",
+    "build": "tsc",
     "serve": "npm run build && firebase emulators:start --only functions",
     "shell": "npm run build && firebase functions:shell",
     "start": "npm run shell",
@@ -16,16 +15,21 @@
   "main": "lib/index.js",
   "dependencies": {
     "@types/shelljs": "^0.8.8",
+    "axios": "^0.21.0",
     "cookie-parser": "^1.4.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "express-handlebars": "^5.2.0",
+    "firebase": "^8.1.1",
     "firebase-admin": "^9.2.0",
     "firebase-functions": "^3.11.0",
     "http-errors": "^1.8.0",
-    "jade": "^1.11.0",
-    "morgan": "^1.10.0",
+    "ip-validator": "0.0.1",
     "path": "^0.12.7",
+    "request-ip": "^2.1.3",
     "shelljs": "^0.8.4",
-    "ts-node": "^9.0.0"
+    "ts-node": "^9.0.0",
+    "uuidv4": "^6.2.5"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^3.9.1",
