--- a/09-project/functions/package.json
+++ b/09-project/functions/package.json
@@ -17,6 +17,7 @@
     "@types/shelljs": "^0.8.8",
     "axios": "^0.21.0",
     "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.2.0",
